[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "pymongo>=4.14.1",
    "python-telegram-bot>=22.3",
    "requests>=2.32.5",
    "gunicorn>=21.2.0",
    "flask-sqlalchemy>=3.1.1",
    "psycopg2-binary>=2.9.10",
    "email-validator>=2.2.0",
]
